--- a/src/styles/ModalExcluir.module.css
+++ b/src/styles/ModalExcluir.module.css
@@ -1,55 +1,56 @@
-.modal-validation.background {
+.background {
     position: fixed;
-    top: 0;
+    top:0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
+    background-color: rgba(128, 128, 128, 0.5);
     justify-content: center;
     align-items: center;
-  }
+    z-index: 3;
+}
   
-  .modal-validation.container {
+.container {
     background-color: #ffffff;
-    border-radius: 4px;
+    border-radius: 10px;
     padding: 20px;
     width: 400px;
     max-width: 90%;
     text-align: center;
+    box-shadow: 0 0 10px #00000080;
   }
-  
-  .modal-validation.title {
+ 
+  .title {
     font-size: 20px;
     margin-bottom: 10px;
   }
   
-  .modal-validation.message {
-    font-size: 16px;
-    margin-bottom: 20px;
+.message {
+    font-size: 13px;
+    margin-bottom: 1em;
   }
   
-  .modal-validation.button-container {
+.buttonContainer {
     display: flex;
     justify-content: center;
   }
   
-  .modal-validation.confirm-button,
-  .modal-validation.cancel-button {
+  .confirmButton,
+ .cancelButton {
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 12px;
     margin: 0 10px;
   }
   
-  .modal-validation.confirm-button {
+.confirmButton {
     background-color: #27ae60;
     color: #ffffff;
   }
-  
-  .modal-validation.cancel-button {
+.cancelButton {
     background-color: #c0392b;
     color: #ffffff;
   }
