--- a/src/styles/ComponenteQuill.module.css
+++ b/src/styles/ComponenteQuill.module.css
@@ -1,37 +1,38 @@
 
+.container h3 {
+  margin-bottom: 1rem;
+}
 .labelInput{
   display: flex;
   flex-direction: column;
   align-items: start;
 }
 
-
  .meuEditorQuill{
   border-radius: 5px;
   line-height: 1.5;
-  border: 1px solid var(--blue-300);
+  border: 1px solid var(--gray-200);
   border-radius: 4px;
 }
 .customToolbar {
-  border: 1px solid var(--blue-300);
+  border: 1px solid var(--gray-200);
 }
-.meuEditorQuill:focus-within{
-    box-shadow: 0 0 5px var(--blue-300);
-}
-
-.meuEditorQuill:focus {
-  outline: transparent;
+.meuEditorQuill:focus-within, .inputName:focus-within {
+    box-shadow: 0 0 5px var(--gray-200);
 }
 
 .inputName {
   text-align: start;
+  border-radius: 4px;
   width: 100%;
   padding-left: 0.7rem;
   height: 2.5rem;
-  border: 0.6px solid #cccccc;
+  margin-top: 0.7rem;
+  color: var(--gray-300);
+  border: 0.6px solid var(--gray-200);
   cursor: text;
 }
-.inputName:focus {
+.inputName:focus, .meuEditorQuill:focus {
   outline: transparent;
 }
 
