--- a/src/styles/ModalAddEditSchool.module.css
+++ b/src/styles/ModalAddEditSchool.module.css
@@ -42,7 +42,7 @@
     padding-left: 0.7rem;
     height: 2.5rem;
     border-radius: 5px;
-    border: 1px solid var(--blue-300);
+    border: 1px solid var(--gray-200);
     margin-top: 0.2rem;
     cursor: text;
   }
@@ -53,13 +53,13 @@
     height: 2.5rem;
     color: #7286a2;
     border-radius: 5px;
-    border: 1px solid var(--blue-300);
+    border: 1px solid var(--gray-200);
     margin-top: 0.2rem;
     cursor: pointer;
   }
 
 .inputNameContactSSO:focus-within, .inputSelect:focus-within {
-    box-shadow: 0 0 5px var(--blue-300);
+    box-shadow: 0 0 5px var(--gray-200);
 }
 .inputSelect:focus {
   outline: transparent;
