--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     margin-bottom: 5em;
   }
-  
+
   .pageContentContainer {
     display: flex;
     flex-direction: column;
@@ -10,15 +10,21 @@
     margin-top: 1.7em;
     padding: 1.2em;
     padding-bottom: 0;
+    margin-bottom: 2rem;
   }
-  
-  .createButtonContainer {
+  .boxToAlignBtns {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    justify-content: end;
+
   }
-  
+
+  .createButtonContainer {
+      display: flex;
+      justify-content: flex-end;
+      margin-right: 0.6rem;
+  }
+
   .createButton {
     display: flex;
     border-radius: 3rem;
@@ -27,6 +33,7 @@
     color: var(--white);
     background-color: var(--blue-300);
     justify-content: center;
+    gap: 0.3rem;
     align-items: center;
     padding: 1em 0.8em 1em 0.8em;
     font-family: "Poppins", sans-serif;
@@ -34,8 +41,25 @@
     box-shadow: 0px 0.3em 1em rgba(0, 0, 0, 0.2);
     user-select: none;
   }
-  
+  .createButtonTeste {
+    display: flex;
+    border-radius: 3rem;
+    height: 3rem;
+    width: 8rem;
+    color:var(--blue-300);
+    background-color: var(--white);
+    justify-content: center;
+    align-items: center;
+    padding: 1em 0.8em 1em 0.8em;
+    font-family: "Poppins", sans-serif;
+    transition: box-shadow 0.3s ease-out, background-color 0.3s ease-out;
+    box-shadow: 0px 0.3em 1em rgba(0, 0, 0, 0.2);
+    user-select: none;
+  }
+
   .createButton:hover {
     cursor: pointer;
   }
-  
+  .createButtonTeste:hover {
+    cursor: pointer;
+  }
