--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,8 @@
     --white: #ffffff;
     --blue-300: #0DB4B0;
     --blue-500: #0656ff;
-    --gray-200:#586571;
+    --gray-200: #bec8db;
+    --gray-300:#586571;
 }
 
 *{
