--- a/src/styles/ModalAddUser.module.css
+++ b/src/styles/ModalAddUser.module.css
@@ -1,6 +1,6 @@
 .backGroundModalAddUser {
   position: fixed;
-  top:0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -41,23 +41,25 @@
   cursor: text;
 }
 
-.inputAddUserSelect{
+.inputAddUserSelect {
   text-align: start;
-    width: 100%;
-    padding-left: 0.7rem;
-    height: 2.5rem;
-    color: #7286a2;
-    border-radius: 5px;
-    border: 1px solid var(--gray-200);
-    margin-top: 0.2rem;
-    cursor: pointer;
+  width: 100%;
+  padding-left: 0.7rem;
+  height: 2.5rem;
+  color: #7286a2;
+  border-radius: 5px;
+  border: 1px solid var(--gray-200);
+  margin-top: 0.2rem;
+  cursor: pointer;
 }
 
-.inputAddUser:focus-within, .inputAddUserSelect:focus-within {
+.inputAddUser:focus-within,
+.inputAddUserSelect:focus-within {
   box-shadow: 0 0 5px var(--gray-200);
 }
-.inputAddUser:focus, .inputAddUserSelect:focus {
-outline: transparent;
+.inputAddUser:focus,
+.inputAddUserSelect:focus {
+  outline: transparent;
 }
 
 .buttonContainer {
@@ -69,17 +71,17 @@ outline: transparent;
 
 .confirmButton,
 .cancelButton {
-   border: none;
-   border-radius: 4px;
-   padding: 10px 20px;
-   cursor: pointer;
- }
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
 
 .confirmButton {
-   background-color: #27ae60;
-   color: #ffffff;
- }
+  background-color: #27ae60;
+  color: #ffffff;
+}
 .cancelButton {
-   background-color: #c0392b;
-   color: #ffffff;
- }
+  background-color: #c0392b;
+  color: #ffffff;
+}
