--- a/src/styles/ModalAddUser.module.css
+++ b/src/styles/ModalAddUser.module.css
@@ -1,7 +1,8 @@
 .backGroundModalAddUser {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
   display: flex;
@@ -13,14 +14,16 @@
 .container {
   display: flex;
   flex-direction: column;
+  position: relative;
+  z-index: 4;
   background-color: var(--white);
   border-radius: 10px;
   padding: 2rem;
   width: 43rem;
+  color: var(--gray-300);
   max-width: 90%;
   text-align: center;
   box-shadow: 0 0 10px #00000080;
-  z-index: 8;
   gap: 1rem;
 }
 .labelModalAddUser {
@@ -52,7 +55,23 @@
   margin-top: 0.2rem;
   cursor: pointer;
 }
+.uploadedImage {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 5px;
+}
+.inputFile {
+  display: flex;
+  justify-content: center;
 
+  width: 100%;
+  padding-left: 0.7rem;
+  height: 2.5rem;
+  border-radius: 5px;
+  border: 1px solid var(--gray-200);
+  padding-top: 0.5rem;
+  margin-top: 0.2rem;
+}
 .inputAddUser:focus-within,
 .inputAddUserSelect:focus-within {
   box-shadow: 0 0 5px var(--gray-200);
