--- a/src/styles/CardLessons.module.css
+++ b/src/styles/CardLessons.module.css
@@ -3,16 +3,20 @@
   min-height: 20vh;
   margin-bottom: 5em;
 }
+
 .pageContentContainer {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   height: 100%;
   margin-top: 1.7em;
   padding: 1.2em;
+  padding-bottom: 0;
   margin-bottom: 2rem;
-  flex-wrap: wrap;
 }
-
+.boxBtn {
+  width: 100%;
+}
 .boxNome {
   display: flex;
   flex-direction: column;
@@ -32,6 +36,7 @@
 
 .boxCardLesson {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: var(--blue-300);
@@ -46,6 +51,7 @@
 .cardLessons {
   display: flex;
   flex-direction: column;
+
   justify-content: space-between;
   align-items: center;
   color: var(--white);
@@ -59,7 +65,7 @@
   background-size: contain;
 }
 
-.boxActions {
+#boxActions {
   display: flex;
   justify-content: end;
   padding: 0.3rem 0.3rem 0 0;
