--- a/src/styles/ModalExcluir.module.css
+++ b/src/styles/ModalExcluir.module.css
@@ -8,6 +8,7 @@
   background-color: rgba(128, 128, 128, 0.5);
   justify-content: center;
   align-items: center;
+  z-index: 3;
 }
 
 .container {
@@ -26,8 +27,9 @@
   margin-bottom: 10px;
 }
 
-.message {
-  font-size: 13px;
+#text {
+  text-align: center;
+  font-size: 0.87rem;
   margin-bottom: 1em;
 }
 
