--- a/src/styles/CardLessons.module.css
+++ b/src/styles/CardLessons.module.css
@@ -6,7 +6,7 @@
 
 .pageContentContainer {
   display: flex;
-  justify-content: space-between;
+  gap: 1rem;
   flex-wrap: wrap;
   height: 100%;
   margin-top: 1.7em;
@@ -42,7 +42,7 @@
   background-color: var(--blue-300);
   width: 11rem;
   height: 10.8rem;
-  border-radius: 5px;
+  border-radius: 0px 0px 5px 5px;
   cursor: pointer;
   font-family: 'Poppins', sans-serif;
   font-size: 0.87rem;
@@ -52,7 +52,7 @@
   display: flex;
   flex-direction: column;
 
-  justify-content: space-between;
+  justify-content: end;
   align-items: center;
   color: var(--white);
   width: 10rem;
@@ -64,12 +64,14 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
-
-#boxActions {
+.boxActions {
   display: flex;
+  padding-top: 0.2rem;
   justify-content: end;
-  padding: 0.3rem 0.3rem 0 0;
-  width: 100%;
+  width: 11rem;
+  height: 1.8rem;
+  border-radius: 5px 5px 0px 0px;
+  background-color: var(--blue-300);
 }
 .cardLessons:hover {
   width: 100%;
