--- a/src/styles/OnOffToogler.module.css
+++ b/src/styles/OnOffToogler.module.css
@@ -1,20 +1,20 @@
 .container {
   display: flex;
-  width: 5.4em;
+  width: 5.4rem;
   justify-content: space-between;
   flex-wrap: nowrap;
   align-items: flex-start;
-  border-radius: 0.3em;
+  border-radius: 0.3rem;
   border: 1px solid var(--blue-300);
   cursor: pointer;
-  box-shadow: 0px 0.3em 1em rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0.3rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 .inner {
   display: flex;
   flex: 1;
   justify-content: center;
-  padding: 0.6em;
+  padding: 0.6rem;
   padding-left: none;
   padding-right: none;
   user-select: none;
@@ -31,11 +31,11 @@
 }
 
 .on {
-  border-top-left-radius: 0.2em;
-  border-bottom-left-radius: 0.2em;
+  border-top-left-radius: 0.2rem;
+  border-bottom-left-radius: 0.2rem;
 }
 
 .off {
-  border-top-right-radius: 0.2em;
-  border-bottom-right-radius: 0.2em;
+  border-top-right-radius: 0.2rem;
+  border-bottom-right-radius: 0.2rem;
 }
