--- a/src/styles/ModalStandard.module.css
+++ b/src/styles/ModalStandard.module.css
@@ -212,3 +212,27 @@
 .boxSenhasAddUser {
   width: 48%;
 }
+.optionContainer {
+  display: grid;
+  margin-top: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 13px;
+  max-height: calc(5 * 20px);
+  overflow-y: auto;
+}
+
+.labelTitle {
+  grid-column: span 2;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+.divCheckBoxVincularAgente {
+  display: flex;
+  align-items: center;
+}
+
+.checkBoxModalVincularAgente {
+  margin-right: 0.3rem;
+  cursor: pointer;
+}
