--- a/src/styles/DigitalResources.module.css
+++ b/src/styles/DigitalResources.module.css
@@ -2,3 +2,15 @@
   width: 100%;
   height: 80vh;
 }
+.containerNaoContemDados {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60vh;
+}
+.spanText {
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: brown;
+}
