--- a/src/styles/ModalAddDoc.module.css
+++ b/src/styles/ModalAddDoc.module.css
@@ -1,103 +1,25 @@
-/* .backgroundModal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.boxForm {
   display: flex;
-  background-color: rgba(128, 128, 128, 0.5);
+  flex-direction: column;
+  gap: 1rem;
+  height: 30rem;
   justify-content: center;
   align-items: center;
-  z-index: 3;
 }
 
 .container {
   background-color: var(--white);
   border-radius: 10px;
   padding: 2rem;
-  width: 43rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  width: 50rem;
   max-width: 90%;
-  max-height: 80%;
+  max-height: 23rem;
+  gap: 1rem;
   overflow-y: auto;
   text-align: center;
   box-shadow: 0 0 10px #00000080;
-  z-index: 8;
-}
-.boxStandard {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  gap: 1rem;
-  margin-top: 1rem;
-}
-
-.labelStandard {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-}
-
-.inputStandard {
-  all: unset;
-  text-align: start;
-  width: 100%;
-  padding-left: 0.7rem;
-  height: 2.5rem;
-  border-radius: 5px;
-  border: 1px solid var(--gray-200);
-  margin-top: 0.2rem;
-  cursor: text;
-}
-
-.buttonContainer {
-  display: flex;
-  justify-content: center;
-  margin-top: 1rem;
-  gap: 1rem;
-  position: sticky;
-}
-
-.confirmButton,
-.cancelButton {
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.confirmButton {
-  background-color: #27ae60;
-  color: #ffffff;
-}
-.cancelButton {
-  background-color: #c0392b;
-  color: #ffffff;
-} */
-
-.backgroundModal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  background-color: rgba(128, 128, 128, 0.5);
-  justify-content: center;
-  align-items: center;
-  z-index: 3;
-}
-
-.container {
-  background-color: var(--white);
-  border-radius: 10px;
-  padding: 2rem;
-  width: 43rem;
-  max-width: 90%;
-  max-height: 80%;
-  overflow-y: auto;
-  text-align: center;
-  box-shadow: 0 0 10px #00000080;
-  z-index: 8;
   display: flex;
   flex-direction: column;
 }
@@ -110,7 +32,6 @@
   position: sticky;
   bottom: 0;
   padding: 1rem;
-  z-index: 9;
 }
 
 .confirmButton,
@@ -135,6 +56,7 @@
   flex-direction: column;
   width: 100%;
   gap: 1rem;
+
   margin-top: 1rem;
 }
 
