--- a/src/styles/Action.module.css
+++ b/src/styles/Action.module.css
@@ -29,7 +29,7 @@
   padding: 0.5rem;
 }
 .modal button:hover {
-  background-color: var(--blue-300);
+  background-color: var(--verde-tech);
   color: var(--white);
 }
 .fullScreenDiv {
