--- a/src/styles/CardLessons.module.css
+++ b/src/styles/CardLessons.module.css
@@ -22,8 +22,8 @@
   flex-direction: column;
   justify-content: center;
   height: 3.5rem;
-  box-shadow: 0px -3px 3px rgba(78, 78, 78, 0.2);
-  background-color: rgba(0, 0, 0, 0.14);
+  box-shadow: 0px -3px 3px var(--dark-gray);
+  background-color: var(--black-14);
   align-items: center;
   padding: 0.3rem;
   text-align: center;
@@ -39,7 +39,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--blue-300);
+  background-color: var(--verde-tech);
   width: 11rem;
   height: 10.8rem;
   border-radius: 0px 0px 5px 5px;
@@ -57,7 +57,7 @@
   color: var(--white);
   width: 10rem;
   height: 10rem;
-  background: linear-gradient(to bottom, var(--blue-500), var(--blue-300));
+  background: linear-gradient(to bottom, var(--azul-tech), var(--verde-tech));
   cursor: pointer;
   border-radius: 5px;
   background-image: url('/logo.png');
@@ -71,7 +71,7 @@
   width: 11rem;
   height: 1.8rem;
   border-radius: 5px 5px 0px 0px;
-  background-color: var(--blue-300);
+  background-color: var(--verde-tech);
 }
 .cardLessons:hover {
   width: 100%;
