--- a/src/styles/InfosContrato.module.css
+++ b/src/styles/InfosContrato.module.css
@@ -1,7 +1,7 @@
 .contract_info {
   display: flex;
   flex-direction: column;
-  background-color: #f5f5f5;
+  background-color: var(--white);
   padding: 1rem;
   border-radius: 5px;
   margin-right: 20px;
