--- a/src/styles/Loader.module.css
+++ b/src/styles/Loader.module.css
@@ -26,7 +26,7 @@
   bottom: 0;
   margin: auto;
   border: 0.25em solid;
-  border-color: transparent transparent var(--blue-300) var(--blue-300);
+  border-color: transparent transparent var(--verde-tech) var(--verde-tech);
   width: 2.3em;
   height: 2.3em;
   border-radius: 50%;
@@ -37,7 +37,7 @@
 .loader::before {
   width: 1.6em;
   height: 1.6em;
-  border-color: var(--blue-500) var(--blue-500) transparent transparent;
+  border-color: var(--azul-tech) var(--azul-tech) transparent transparent;
   animation: rotation 1.5s linear infinite;
 }
 
