--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -1,3 +1,21 @@
+
+@media screen and (max-width: 768px) {
+  .containerMain {
+    width: 70%;
+    min-width: 250px; 
+    height: 40%;
+  }
+}
+
+
+@media screen and (max-width: 480px) {
+  .containerMain {
+    width: 90%;
+    min-width: 200px;
+    height: 35%;
+  }
+}
+
 .containerSignIn {
   display: flex;
   width: 100vw;
@@ -11,19 +29,45 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 60%;
+  width: 100%;
   height: 100vh;
-  background-image: url('/fundo.png');
+  background-image: url('/fundo_alternativo2.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.logoContainer {
+  position: absolute;
+  left: 50%;
+  top: 13%;
+  transform: translate(-50%, -50%);
+  width: 20%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  height: 100%;
+  width: auto; 
+}
+
 .containerMain {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40%;
-  height: 100%;
+  width: 50%;
+  min-width: 420px;
+  max-width: 420px;  
+  height: 50%;
+  min-height: 300px;
+  max-height: 420px;
+  background-color: var(--white);
+  border-radius: 40px;
+  box-shadow: 0px 0px 20px 0px var(--black-200);
 }
+
 .formLogin {
   display: flex;
   flex-direction: column;
@@ -52,6 +96,7 @@
 .groupForm {
   width: 100%;
 }
+
 .btnLogin {
   all: unset;
   display: flex;
@@ -59,17 +104,77 @@
   height: 1.2rem;
   width: 8rem;
   color: var(--white);
-  background-color: var(--blue-300);
+  background-color: var(--verde-tech);
   justify-content: center;
   align-items: center;
   padding: 1em 0.8em 1em 0.8em;
   font-family: 'Poppins', sans-serif;
   cursor: pointer;
 }
+
+.btnLogin:link,
+.btnLogin:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+    position: absolute;
+}
+
+.btnLogin:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px var(--black-200);
+}
+
+.btnLogin:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px var(--black-200);
+}
+
+.btnLogin::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btnLogin::after {
+  background-color: var(--verde-tech);
+}
+
+.btnLogin:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btnLogin-animated {
+  animation: moveInBottom 5s ease-out;
+  animation-fill-mode: backwards;
+}
+@keyframes moveInBottom {
+  0% {
+      opacity: 0;
+      transform: translateY(30px);
+  }
+
+  100% {
+      opacity: 1;
+      transform: translateY(0px);
+  }
+}
+
 .boxWarning {
   text-align: center;
   height: 2.5rem;
 }
 .error {
-  color: #ff0000;
+  color: var(--red-300);
 }
