--- a/src/styles/ModalAddDoc.module.css
+++ b/src/styles/ModalAddDoc.module.css
@@ -19,7 +19,7 @@
   gap: 1rem;
   overflow-y: auto;
   text-align: center;
-  box-shadow: 0 0 10px #00000080;
+  box-shadow: 0 0 10px var(--black-200);
   display: flex;
   flex-direction: column;
 }
@@ -43,12 +43,12 @@
 }
 
 .confirmButton {
-  background-color: #27ae60;
-  color: #ffffff;
+  background-color: var(--verde-learn);
+  color: var(--white);
 }
 .cancelButton {
-  background-color: #c0392b;
-  color: #ffffff;
+  background-color: var(--red-300);
+  color: var(--white);
 }
 
 .boxStandard {
