--- a/src/styles/ModalDados.module.css
+++ b/src/styles/ModalDados.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  background-color: rgba(128, 128, 128, 0.5);
+  background-color: var(--gray-300);
   justify-content: center;
   align-items: center;
   z-index: 3;
@@ -18,7 +18,7 @@
   width: 35rem;
   max-width: 90%;
   text-align: center;
-  box-shadow: 0 0 10px #00000080;
+  box-shadow: 0 0 10px var(--black-200);
   z-index: 8;
 }
 .boxBtnClose {
