--- a/src/styles/ModalDelete.module.css
+++ b/src/styles/ModalDelete.module.css
@@ -5,21 +5,21 @@
   width: 100%;
   height: 100%;
   display: flex;
-  background-color: rgba(128, 128, 128, 0.5);
+  background-color: var(--gray-300);
   justify-content: center;
   align-items: center;
   z-index: 3;
 }
 
 .container {
-  background-color: #ffffff;
+  background-color: var(--white);
   border-radius: 10px;
   padding: 20px;
   width: 400px;
   color: var(--gray-300);
   max-width: 90%;
   text-align: center;
-  box-shadow: 0 0 10px #00000080;
+  box-shadow: 0 0 10px var(--black-200);
 }
 
 .title {
@@ -49,10 +49,10 @@
 }
 
 .confirmButton {
-  background-color: #27ae60;
-  color: #ffffff;
+  background-color: var(--verde-learn);
+  color: var(--white);
 }
 .cancelButton {
-  background-color: #c0392b;
-  color: #ffffff;
+  background-color: var(--red-300);
+  color: var(--white);
 }
