--- a/src/styles/ModalOpenDoc.module.css
+++ b/src/styles/ModalOpenDoc.module.css
@@ -5,18 +5,18 @@
   width: 100%;
   height: 100%;
   display: flex;
-  background-color: rgba(128, 128, 128, 0.5);
+  background-color: var(-gray--300);
   justify-content: center;
   align-items: center;
   z-index: 3;
 }
 
 .container {
-  background-color: #ffffff;
+  background-color: var(--white);
   border-radius: 10px;
   width: 75%;
   height: 85%;
-  box-shadow: 0 0 10px #00000080;
+  box-shadow: 0 0 10px var(--black-200);
 }
 
 .boxBtns {
