--- a/src/styles/ModalStandard.module.css
+++ b/src/styles/ModalStandard.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  background-color: rgba(128, 128, 128, 0.5);
+  background-color: var(--gray-300);
   justify-content: center;
   align-items: center;
   z-index: 3;
@@ -18,7 +18,7 @@
   width: 43rem;
   max-width: 90%;
   text-align: center;
-  box-shadow: 0 0 10px #00000080;
+  box-shadow: 0 0 10px var(--black-200);
   z-index: 8;
 }
 
@@ -54,7 +54,7 @@
   padding-left: 0.7rem;
   height: 2.5rem;
   border-radius: 5px;
-  border: 1px solid #ec250e;
+  border: 1px solid var(--red-300);
   margin-top: 0.2rem;
   cursor: text;
 }
@@ -95,12 +95,12 @@
 }
 
 .confirmButton {
-  background-color: #27ae60;
-  color: #ffffff;
+  background-color: var(--verde-learn);
+  color: var(--white);
 }
 .cancelButton {
-  background-color: #c0392b;
-  color: #ffffff;
+  background-color: var(--red-300);
+  color: var(--white);
 }
 
 .boxCidadeEstadoCepTel {
