--- a/src/styles/PageLoader.module.css
+++ b/src/styles/PageLoader.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  background-color: rgba(128, 128, 128, 0.5);
+  background-color: var(--gray-300);
   justify-content: center;
   align-items: center;
   z-index: 7;
