--- a/src/styles/Shared.module.css
+++ b/src/styles/Shared.module.css
@@ -1,4 +1,4 @@
 .shadowBorder {
-  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 16px var(--black-14);
   border-radius: 7px;
 }
