--- a/src/styles/SideNavBar.module.css
+++ b/src/styles/SideNavBar.module.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: left;
   justify-content: space-between;
-  box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.07);
+  box-shadow: 2px 0px 10px var(--black-14);
   transition: transform 0.3s ease-out;
   transform: translateX(0);
 }
@@ -32,11 +32,11 @@
 }
 
 .navBarButton:hover {
-  color: var(--blue-500);
+  color: var(--azul-tech);
 }
 
 .activeNavBarButton {
-  background: linear-gradient(to bottom, var(--blue-500), var(--blue-300));
+  background: linear-gradient(to bottom, var(--azul-tech), var(--verde-tech));
   border-radius: 0.3em;
   color: var(--white);
 }
