--- a/src/styles/Table.module.css
+++ b/src/styles/Table.module.css
@@ -11,8 +11,8 @@
 
 .table th {
   border-collapse: collapse;
-  border-top: 1px solid #eaf0f7;
-  border-bottom: 2px solid #eaf0f7;
+  border-top: 1px solid var(--white-200);
+  border-bottom: 2px solid var(--white-200);
   padding: 1.1em;
   text-align: left;
   font-size: 0.8em;
@@ -26,9 +26,9 @@
 }
 
 .odd {
-  background-color: #f1f5fa;
+  background-color: var(--white-300);
   border-collapse: collapse;
-  border: 1px solid #eaf0f7;
+  border: 1px solid var(--white-200);
   border-left: none;
   border-right: none;
 }
@@ -48,7 +48,7 @@
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  background-color: var(--blue-300);
+  background-color: var(--verde-tech);
   cursor: pointer;
 }
 .boxInput {
@@ -95,5 +95,5 @@
   cursor: pointer;
 }
 .pointer:hover {
-  color: #000000;
+  color: var(--black-14);
 }
