--- a/src/styles/TopNavBar.module.css
+++ b/src/styles/TopNavBar.module.css
@@ -7,10 +7,10 @@
   display: flex;
   height: 4.5em;
   align-items: center;
-  background-color: white;
+  background-color: var(--white);
   padding: 1rem;
-  box-shadow: 0px 8px 20px -6px rgba(0, 0, 0, 0.09);
-  color: #7081b9;
+  box-shadow: 0px 8px 20px -6px var(--black-14);
+  color: var(--azul-tech);
 }
 
 .logoContainer {
