--- a/src/styles/ModalStandard.module.css
+++ b/src/styles/ModalStandard.module.css
@@ -92,6 +92,7 @@
   border-radius: 4px;
   padding: 10px 20px;
   cursor: pointer;
+  box-shadow: 0 5px 10px var(--black-200);
 }
 
 .confirmButton {
