--- a/src/styles/Table.module.css
+++ b/src/styles/Table.module.css
@@ -43,20 +43,80 @@
 .pagination button {
   all: unset;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  border-radius: 3rem;
   width: 3rem;
   height: 3rem;
-  border-radius: 50%;
+  color: var(--white);
   background-color: var(--verde-tech);
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
   cursor: pointer;
 }
+
+.pagination button:link,
+.pagination button:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 50%;
+    transition: all .2s;
+    position: absolute;
+}
+
+.pagination button:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px var(--black-200);
+}
+
+.pagination button:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px var(--black-200);
+}
+
+.pagination button::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.pagination button:hover::after {
+  transform: scaleX(1.0) scaleY(1.0);
+  opacity: 0;
+}
+
+.pagination button-animated {
+  animation: moveInBottom 5s ease-out;
+  animation-fill-mode: backwards;
+}
+@keyframes moveInBottom {
+  0% {
+      opacity: 0;
+      transform: translateY(30px);
+  }
+
+  100% {
+      opacity: 1;
+      transform: translateY(0px);
+  }
+}
+
 .boxInput {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   gap: 1rem;
 }
+
 .inputFilter {
   all: unset;
   text-align: start;
