--- a/src/styles/ModalStandard.module.css
+++ b/src/styles/ModalStandard.module.css
@@ -64,7 +64,7 @@
   width: 102%;
   padding-left: 0.7rem;
   height: 2.5rem;
-  color: #7286a2;
+  color: var(--gray-200);
   border-radius: 5px;
   border: 1px solid var(--gray-200);
   margin-top: 0.2rem;
