--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -27,28 +27,18 @@
 .createButton {
   all: unset;
   display: flex;
-  border-radius: 3rem;
-  height: 1.2rem;
+  border-radius: 6.25rem;
+  height: 3rem;
   width: 8rem;
   color: var(--white);
   background-color: var(--verde-tech);
   justify-content: center;
   align-items: center;
-  padding: 1em 0.8em 1em 0.8em;
   font-family: 'Poppins', sans-serif;
   cursor: pointer;
+  position: relative;
   box-shadow: 0 5px 10px var(--black-200);
-}
-
-.createButton:link,
-.createButton:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 100px;
-    transition: all .2s;
-    position: absolute;
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 
 .createButton:hover {
@@ -63,36 +53,21 @@
 
 .createButton::after {
   content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 100px;
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 6.25rem;
+  background: var(--verde-tech);
   z-index: -1;
-  transition: all .4s;
+  opacity: 0;
+  transition: all 0.4s;
 }
 
 .createButton:hover::after {
-  transform: scaleX(1.0) scaleY(1.0);
-  opacity: 0;
-}
-
-.createButton-animated {
-  animation: moveInBottom 5s ease-out;
-  animation-fill-mode: backwards;
-}
-@keyframes moveInBottom {
-  0% {
-      opacity: 0;
-      transform: translateY(30px);
-  }
-
-  100% {
-      opacity: 1;
-      transform: translateY(0px);
-  }
+  opacity: 1;
+  transform: scale(1.1);
 }
 
 .createButtonTeste {
@@ -115,5 +90,80 @@
   cursor: pointer;
 }
 .createButtonTeste:hover {
+  cursor: pointer;
+}
+
+.backButtonContainer {
+  display:flex;
+  justify-content: flex-end;
+  margin-right: 0.6rem;
+}
+
+.backButton {
+  all: unset;
+  display: flex;
+  border-radius: 6.25rem;
+  height: 3rem;
+  width: 8rem;
+  color: var(--black-200);
+  background-color: var(--white);
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+  position: relative;
+  box-shadow: 0 5px 10px var(--black-200);
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.backButton:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px var(--black-200);
+}
+
+.backButton:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px var(--black-200);
+}
+
+.backButton::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 6.25rem;
+  background: var(--white);
+  z-index: -1;
+  opacity: 0;
+  transition: all 0.4s;
+}
+
+.backButton:hover::after {
+  opacity: 1;
+  transform: scale(1.1);
+}
+
+.backButtonTeste {
+  display: flex;
+  border-radius: 3rem;
+  height: 3rem;
+  width: 8rem;
+  color: var(--verde-tech);
+  background-color: var(--white);
+  justify-content: center;
+  align-items: center;
+  padding: 1em 0.8em 1em 0.8em;
+  font-family: 'Poppins', sans-serif;
+  transition: box-shadow 0.3s ease-out, background-color 0.3s ease-out;
+  box-shadow: 0px 0.3em 1em var(--black-200);
+  user-select: none;
+}
+
+.backButton:hover {
+  cursor: pointer;
+}
+.backButtonTeste:hover {
   cursor: pointer;
 }
