--- a/src/styles/Table.module.css
+++ b/src/styles/Table.module.css
@@ -22,7 +22,7 @@
   border-collapse: collapse;
   padding: 1.1em;
   font-size: 0.8em;
-  color: #7286a2;
+  color: var(--blue-light);
 }
 
 .odd {
@@ -43,7 +43,6 @@
 .pagination button {
   all: unset;
   display: flex;
-  border-radius: 3rem;
   width: 3rem;
   height: 3rem;
   color: var(--white);
@@ -53,17 +52,8 @@
   align-items: center;
   font-family: 'Poppins', sans-serif;
   cursor: pointer;
-}
-
-.pagination button:link,
-.pagination button:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 50%;
-    transition: all .2s;
-    position: absolute;
+  position: relative;
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 
 .pagination button:hover {
@@ -78,37 +68,23 @@
 
 .pagination button::after {
   content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 100px;
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: var(--verde-tech);
   z-index: -1;
-  transition: all .4s;
+  opacity: 0;
+  transition: all 0.4s;
 }
 
 .pagination button:hover::after {
-  transform: scaleX(1.0) scaleY(1.0);
-  opacity: 0;
+  opacity: 1;
+  transform: scale(1.2);
 }
 
-.pagination button-animated {
-  animation: moveInBottom 5s ease-out;
-  animation-fill-mode: backwards;
-}
-@keyframes moveInBottom {
-  0% {
-      opacity: 0;
-      transform: translateY(30px);
-  }
-
-  100% {
-      opacity: 1;
-      transform: translateY(0px);
-  }
-}
 
 .boxInput {
   display: flex;
@@ -127,7 +103,7 @@
   font-size: 0.9em;
   border-radius: 5px;
   color: var(--gray-300);
-  border: 1px solid var(--gray-200);
+  border: 0.063em solid var(--gray-200);
   cursor: text;
 }
 .inputSelect {
@@ -140,7 +116,7 @@
   font-size: medium;
   color: var(--gray-300);
   border-radius: 5px;
-  border: 1px solid var(--gray-200);
+  border: 0.063em solid var(--gray-200);
   cursor: pointer;
 }
 .inputFilter:focus-within,
