--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -97,31 +97,27 @@
   width: 100%;
 }
 
+.btnLoginContainer {
+  display:flex;
+  justify-content: flex-end;
+  margin-right: 0.6rem;
+}
+
 .btnLogin {
   all: unset;
   display: flex;
-  border-radius: 3rem;
-  height: 1.2rem;
+  border-radius: 6.25rem;
+  height: 3rem;
   width: 8rem;
   color: var(--white);
-  background-color: var(--verde-tech);
+  background-color: var(--verde-learn);
   justify-content: center;
   align-items: center;
-  padding: 1em 0.8em 1em 0.8em;
   font-family: 'Poppins', sans-serif;
   cursor: pointer;
+  position: relative;
   box-shadow: 0 5px 10px var(--black-200);
-}
-
-.btnLogin:link,
-.btnLogin:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 100px;
-    transition: all .2s;
-    position: absolute;
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 
 .btnLogin:hover {
@@ -136,36 +132,46 @@
 
 .btnLogin::after {
   content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 100px;
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 6.25rem;
+  border: 2px;
+  border-color: var(--verde-light);
+  background: var(--verde-learn);
   z-index: -1;
-  transition: all .4s;
+  opacity: 0;
+  transition: all 0.4s;
 }
 
 .btnLogin:hover::after {
-  transform: scaleX(1.0) scaleY(1.0);
-  opacity: 0;
+  opacity: 1;
+  transform: scale(1.1);
 }
 
-.btnLogin-animated {
-  animation: moveInBottom 5s ease-out;
-  animation-fill-mode: backwards;
+.btnLoginTeste {
+  display: flex;
+  border-radius: 3rem;
+  height: 3rem;
+  width: 8rem;
+  color: var(--blue-300);
+  background-color: var(--white);
+  justify-content: center;
+  align-items: center;
+  padding: 1em 0.8em 1em 0.8em;
+  font-family: 'Poppins', sans-serif;
+  transition: box-shadow 0.3s ease-out, background-color 0.3s ease-out;
+  box-shadow: 0px 0.3em 1em var(--black-200);
+  user-select: none;
 }
-@keyframes moveInBottom {
-  0% {
-      opacity: 0;
-      transform: translateY(30px);
-  }
 
-  100% {
-      opacity: 1;
-      transform: translateY(0px);
-  }
+.btnLogin:hover {
+  cursor: pointer;
+}
+b.tnLoginTeste:hover {
+  cursor: pointer;
 }
 
 .boxWarning {
