--- a/src/styles/ModalAddDoc.module.css
+++ b/src/styles/ModalAddDoc.module.css
@@ -40,7 +40,7 @@
   border-radius: 4px;
   padding: 10px 20px;
   cursor: pointer;
-  box-shadow: 0 5px 10px var(--black-200);
+  box-shadow: 0px 10px 20px 0px var(--black-200);
 }
 
 .confirmButton {
