--- a/src/styles/ModalStandard.module.css
+++ b/src/styles/ModalStandard.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  background-color: var(--gray-300);
+  background-color: var(--gray-202);
   justify-content: center;
   align-items: center;
   z-index: 3;
@@ -92,7 +92,7 @@
   border-radius: 4px;
   padding: 10px 20px;
   cursor: pointer;
-  box-shadow: 0 5px 10px var(--black-200);
+  box-shadow: 0px 10px 20px 0px var(--black-200);
 }
 
 .confirmButton {
