--- a/src/styles/NovoContrato.module.css
+++ b/src/styles/NovoContrato.module.css
@@ -57,6 +57,7 @@
   border-radius: 4px;
   padding: 10px 20px;
   cursor: pointer;
+  box-shadow: 0px 10px 20px 0px var(--black-200);
 }
 
 .confirmButton {
