IMPLEMENTAÇOES DE TESTES PARA PROD

--- a/src/styles/Table.module.css
+++ b/src/styles/Table.module.css
@@ -133,3 +133,13 @@
 .pointer:hover {
   color: var(--black-14);
 }
+.errorNotDados{
+  display: flex;
+  right: 100%;
+  height: 5rem;
+  justify-content: center;
+  align-items: center;
+}
+.errorNotDadosSpan {
+  color: var(--red-300);
+}
