--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@
   --blue-500: #0656ff;
   --gray-200: #bec8db;
   --gray-202: rgba(190, 200, 219, 0.5);
+  --transparent: rgba(190, 200, 219, 0);
   --gray-300: #586571;
   --dark-gray: rgba(78, 78, 78, 0.2);
   --azul-tech:#31599C;
