--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -16,8 +16,10 @@
 
 .containerFundo {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1em;
   width: 100vw;
   height: 100vh;
   background-image: url('/fundo_alternativo2.png');
@@ -51,7 +53,7 @@
   width: 23em;
   background-color: var(--white);
   padding: 1rem 3rem 0rem 3rem;
-  margin-top: 7rem;
+  margin-top: 8rem;
   box-shadow: 0rem 0rem 1.25rem 0rem var(--black-200);
   gap: 1.5em;
 }
@@ -159,8 +161,13 @@
 .boxWarning {
   text-align: center;
   height: 2.5rem;
+  padding-bottom: 3em;
 }
 
 .error {
+  margin-bottom: 1em;
   color: var(--red-300);
+}
+.boxLoaderLogin {
+  height: 3.3em;
 }
