--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,7 @@
   --verde-learn: rgb(0,135,157);
   --verde-light: rgb(166,206,57);
   --azul-escuro: rgb(27,41,73);
+  --azul-tenro: rgb(25, 44, 83);
   --black-14: rgba(0, 0, 0, 0.14);
   --black-200: rgba(0, 0, 0, 0.2);
   --red-300: #ca1c1cce;
