--- a/src/styles/ModalStandard.module.css
+++ b/src/styles/ModalStandard.module.css
@@ -94,15 +94,24 @@
   padding: 10px 20px;
   cursor: pointer;
   box-shadow: 0px 10px 20px 0px var(--black-200);
+  margin-top: -10px; /* Adjust this value to move the buttons up or down */
+  transition: all 0.3s ease; /* Adding a transition for a smooth effect */
 }
 
 .confirmButton {
   background-color: var(--verde-learn);
   color: var(--white);
 }
+
 .cancelButton {
   background-color: var(--red-300);
   color: var(--white);
+}
+
+.confirmButton:hover,
+.cancelButton:hover {
+  transform: translateY(-2px); /* Move the button up slightly on hover */
+  box-shadow: 0px 12px 25px 0px var(--black-200); /* Adjusting the box shadow on hover */
 }
 
 .boxCidadeEstadoCepTel {
