--- a/src/styles/ModalTopNavBaR.module.css
+++ b/src/styles/ModalTopNavBaR.module.css
@@ -56,7 +56,13 @@
 }
 
 .btn:hover {
-  background-color: var(--azul-tech);
+  background-color: var(--azul-escuro);
   color: var(--white);
 }
+
+
+
+
+
+
 
