--- a/src/styles/TopNavBar.module.css
+++ b/src/styles/TopNavBar.module.css
@@ -10,7 +10,7 @@
   background-color: var(--white);
   padding: 1rem;
   box-shadow: 0px 8px 20px -6px var(--black-14);
-  color: var(--azul-tech);
+  color: var(--azul-escuro);
 }
 
 .logoContainer {
