--- a/src/styles/ModalStandard.module.css
+++ b/src/styles/ModalStandard.module.css
@@ -44,6 +44,7 @@
   border-radius: 5px;
   border: 1px solid var(--gray-200);
   margin-top: 0.2rem;
+  color: var(--azul-tenro);
   cursor: text;
 }
 
@@ -64,7 +65,7 @@
   width: 102%;
   padding-left: 0.7rem;
   height: 2.5rem;
-  color: var(--gray-200);
+  color: var(--azul-tenro);
   border-radius: 5px;
   border: 1px solid var(--gray-200);
   margin-top: 0.2rem;
