--- a/src/styles/ModalTopNavBaR.module.css
+++ b/src/styles/ModalTopNavBaR.module.css
@@ -13,14 +13,14 @@
 
 .container {
   background-color: var(--white);
-  border-radius: 1.7rem;
+  border-radius: 10px;
   padding: 1rem;
   width: 10rem;
   color: var(--gray-300);
   text-align: center;
   box-shadow: 0 0 10px var(--black-200);
-  margin-top: 2.8em;
-  margin-right: 1em;
+  margin-top: 3.2em;
+  margin-right: 1.5em;
 }
 
 
@@ -57,6 +57,7 @@
 
 .btn:hover {
   background-color: var(--azul-tech);
+  border-radius: 5px;
   color: var(--white);
 }
 
