buttons topnavbar and icons, editing logout button

--- a/src/styles/TopNavBar.module.css
+++ b/src/styles/TopNavBar.module.css
@@ -10,7 +10,7 @@
   background-color: var(--white);
   padding: 1rem;
   box-shadow: 0px 8px 20px -6px var(--black-14);
-  color: var(--azul-escuro);
+  color: var(--azul-tech);
 }
 
 .logoContainer {
@@ -23,7 +23,20 @@
   margin-right: 0.5em;
 }
 .toogleTopNav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 50%;
+  transition: transform 0.3s;
+  box-shadow: 0 0 10px 3px var(--gray-40);
+}
+
+.toogleTopNav:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 10px 3px var(--gray-100);
 }
 .user {
   font-size: 0.85em;
