--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,8 @@
   --blue-500: #0656ff;
   --gray-200: #bec8db;
   --gray-202: rgba(190, 200, 219, 0.5);
+  --gray-100: rgba(211, 211, 211, 0.7);
+  --gray-40: rgba(211, 211, 211, 0.4);
   --transparent: rgba(190, 200, 219, 0);
   --gray-300: #586571;
   --dark-gray: rgba(78, 78, 78, 0.2);
