--- a/src/styles/ModalTopNavBaR.module.css
+++ b/src/styles/ModalTopNavBaR.module.css
@@ -12,15 +12,18 @@
 }
 
 .container {
+  font-size: 0.80rem;
   background-color: var(--white);
   border-radius: 10px;
   padding: 1rem;
-  width: 10rem;
+  width: 8rem;
+  height: 3rem; 
   color: var(--gray-300);
   text-align: center;
   box-shadow: 0 0 10px var(--black-200);
-  margin-top: 3.2em;
-  margin-right: 1.5em;
+  margin-top: 4.2em;
+  margin-right: 2.2em;
+  position: relative;
 }
 
 .title {
@@ -35,14 +38,14 @@
 }
 
 .buttonContainer {
-  padding: 1rem 0.5rem 1rem 0.5rem;
-  background-color: var(--white);
+  padding: 1rem 0.5rem;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
-  position: relative;
-  width: 8rem;
-  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 6rem;
   border-radius: 0.3rem;
 }
 
