--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -6,7 +6,8 @@
 .pageContentContainer {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 80%;
+  max-height: 80%;
   margin-top: 1.7em;
   padding: 1.2em;
   padding-bottom: 0.9em;
@@ -19,7 +20,7 @@
 }
 
 .createButtonContainer {
-  display:flex;
+  display: flex;
   justify-content: flex-end;
   margin-right: 0.6rem;
 }
@@ -52,7 +53,7 @@
 }
 
 .createButton::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -94,7 +95,7 @@
 }
 
 .backButtonContainer {
-  display:flex;
+  display: flex;
   justify-content: flex-end;
   margin-right: 0.6rem;
 }
@@ -127,7 +128,7 @@
 }
 
 .backButton::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
