--- a/src/styles/ModalStandard.module.css
+++ b/src/styles/ModalStandard.module.css
@@ -33,6 +33,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  font-size: 1rem;
 }
 
 .inputStandard {
@@ -113,6 +114,12 @@
 .cancelButton:hover {
   transform: translateY(-2px);
   box-shadow: 0px 12px 25px 0px var(--black-200);
+}
+
+.confirmButton:active,
+.cancelButton:active {
+transform: translateY(0);
+box-shadow: 0px 6px 12px 0px var(--black-200);
 }
 
 .boxCidadeEstadoCepTel {
