--- a/src/styles/ModalTopNavBaR.module.css
+++ b/src/styles/ModalTopNavBaR.module.css
@@ -16,7 +16,7 @@
   background-color: var(--white);
   border-radius: 10px;
   padding: 1.5rem;
-  width: 12rem;
+  width: 14rem;
   color: var(--gray-300);
   text-align: center;
   box-shadow: 0 0 10px var(--black-200);
@@ -45,8 +45,17 @@
   padding: 0.5rem;
 }
 
+.btn-content {
+  display: flex;
+  align-items: center;
+}
+
 .btn:hover {
   background-color: var(--azul-escuro);
   color: var(--white);
   border-radius: 5px;
+}
+
+.text, .icon {
+  vertical-align: middle;
 }
