--- a/src/styles/NovoContrato.module.css
+++ b/src/styles/NovoContrato.module.css
@@ -38,6 +38,8 @@
   width: 101%;
   padding-left: 0.7rem;
   height: 2.5rem;
+  max-height: 3rem;
+  overflow-y: visible;
   color: var(--azul-tenro);
   background-color: var(--white);
   border-radius: 5px;
@@ -89,8 +91,8 @@
 
 .confirmButton:active,
 .cancelButton:active {
-transform: translateY(0);
-box-shadow: 0px 6px 12px 0px var(--black-200);
+  transform: translateY(0);
+  box-shadow: 0px 6px 12px 0px var(--black-200);
 }
 
 .buttonContainer {
